--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
         "slim/php-view": "^3.1",
         "julionc/slim-basic-auth-middleware": "^3.0",
         "tuupola/slim-basic-auth": "^3.3",
-        "zircote/swagger-php": "^4.4"
+        "zircote/swagger-php": "^4.4",
+        "phpmailer/phpmailer": "^6.6"
     }
 }
-
-
