--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
             "api/dao/OrderDAO.php",
             "api/dao/AddressDAO.php",
             "api/dao/AuthDAO.php",
+            "api/dao/StatusDAO.php",
             "api/controller/LoginController.php",
             "api/controller/CategoryController.php",
             "api/controller/IngredientController.php",
@@ -25,6 +26,7 @@
             "api/controller/ClientController.php",
             "api/controller/OrderController.php",
             "api/controller/AuthController.php",
+            "api/controller/StatusController.php",
             "api/service/Correios.php",
             "api/service/Email.php",
             "api/util/Util.php",
